docs/style.css
@font-face {
    font-family: SFPRODISP;
    src: url("fonts/SF-Pro-Display-Regular.otf") format("opentype");
}
@font-face {
    font-family: SFPRO;
    src: url("fonts/SF-Pro.ttf");
}
@font-face {
    font-family: SFPROTXT;
    src: url("fonts/SF-Pro-Text-Regular.otf") format("opentype");
}
@font-face {
    font-family: SFPRORND;
    src: url("fonts/SF-Pro-Rounded-Regular.otf") format("opentype");
}

p {
    font-size: 24px;
}
a { 
    font-size: 24px;
}
li {
    font-size: 24px;
}
.link {
    background-color: rgb(219, 219, 219);
    margin-top: 0.5%;
    border-radius: 10px;
    padding: 2.5px;
    width: 80%;
    margin: auto;
    margin-bottom: 2%;
}
.links {
    margin: auto;
    justify-content: center;
    align-items: center;
}
.header {
    margin: auto;
    width: fit-content;
    max-width: 80%;
    text-align: center;
    font-size: 24px;
    font-family: SFPRO;
    border-radius: 15px;
    background-color: rgb(237, 239, 241);
    padding: 5px;
    padding-left: 20%;
    padding-right: 20%;
}
.info {
    font-family: SFPRO;
    margin-top: 15px;
    margin-right: auto;
    margin-left: auto;
    width: 50%;
    border-radius: 15px;
    background-color: rgb(237, 239, 241);
    padding: 5px;
}

